# solana-signature-grinder-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/avx512/: base58_avx512.rs  ed25519_avx512.rs  mod.rs  sha256_avx512.rs
src/scalar/: mod.rs
tests/: test_base58_avx512.rs  test_ed25519_avx512.rs  test_sha256_avx512.rs
