[package]
name = "your_crate_name"
version = "0.1.0"
edition = "2021"
root = "src"

[dependencies]
solana-sdk = "1.18.23"
ed25519-dalek = "1.0"
curve25519-dalek = "2.0"
rand = "0.7"
sha2 = "0.10"
hex = "0.4"
rayon = "1.5"
bs58 = "0.4.0"
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
arbitrary = "1.0"
libfuzzer-sys = "0.4"
sha2 = "0.10.0"
hex = "0.4.3"
